# tensor_networks

./: .gitignore  LICENSE  Makefile  README.md  notes.md  pyproject.toml  requirements.txt  test_svd.ipynb  testing.py
.github/workflows/: makefile.yml
__MACOSX/: ._data
apps/transport_solver/: load_config.py  main_loop.py  old_stuff.py  problems.py  solver.py  transport_solver.py
apps/transport_solver/input_files/: hohlraum_1d.yaml  hohlraum_2d.yaml
benchmarks/: benchmark.py
benchmarks/BigEarthNet-v1_0/S2A_MSIL2A_20170613T101031_19_84/: original.json
benchmarks/BigEarthNet-v1_0/S2A_MSIL2A_20170617T113321_87_31/: original.json
benchmarks/BigEarthNet-v1_0/S2A_MSIL2A_20171015T095031_30_22/: original.json
benchmarks/BigEarthNet-v1_0/S2A_MSIL2A_20180507T093041_10_29/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20170814T100029_17_25/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20171016T101009_47_19/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20171219T095409_67_54/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20180204T094159_71_37/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20180326T112109_53_55/: original.json
benchmarks/BigEarthNet-v1_0/S2B_MSIL2A_20180521T100029_56_27/: original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_0/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_1/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_2/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_3/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_4/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_all/stack_all_test_5/: ht_010.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_0/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_1/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_2/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_3/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_4/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_5/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_6/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_7/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_8/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_187_test_9/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_0/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_1/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_2/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_3/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_4/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_5/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_6/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/BigEarthNet-v1_0_stack/stack_18_test_7/: ht_000.json  ht_010.json  ht_010_permuted.json  original.json
benchmarks/PDEBench/1D_Advection/: original.json
benchmarks/SVDinsTN/: order_4_structure_1.json
examples/: initial_tests.py  initial_tests2.py  inner_product_scaling.py  profiling.py  svdinstn_decomposition.py  transport_solver_bc_upwind.txt  transport_solver_explicit.py  transport_solver_explicit_bc.py  transport_solver_explicit_bc2.py  transport_solver_explicit_bc_2d.py  transport_solver_explicit_bc_upwind.py  transport_solver_implicit.py
htucker/: __init__.py  algs.py
htucker/tests/: __init__.py  test.py
pytens/: __init__.py  algs.py  algs2.py  logger.py  search.py  solvers.py  types.py  utils.py
pytens/cross/: cross.py  funcs.py  runner.py
pytens/networks/: htucker.py
pytens/search/: a_star.py  abstraction.py  beam.py  configuration.py  constraint.py  dfs.py  exhaustive.py  mcts.py  nn.py  partition.py  search.py  state.py  sweep.py  types.py  utils.py
scripts/: collect_data.py  plot.ipynb  plot.py  run_benchmark.py  svdinstn_decomposition.py  test.ipynb  train.py
tests/: main_test.py  main_test2.py  search_test.py
(+500 files in other folders)
